* What is new in gsl-1.12+:

** Fixed gsl_odeiv_step_gear2 to restore y on step failure

** gsl_odeiv_evolve_apply now restores the correct value of t on step
   failures [bug #26255].

** Using make install prefix=DIR now puts correct paths in package
   config files gsl-config and gsl.pc

** Modified gsl_monte_vegas to work around pow() function inaccuracies
   on MinGW [bug #25413].

** Increased the number of terms in gsl_sf_mathieu_a and
   gsl_sf_mathieu_b to improve convergence in difficult regions [bug
   #25075]

* What was new in gsl-1.12:

** Upgraded to latest libtool, autoconf and automake (libtool-2.2.6,
   autoconf-2.63, automake-1.10.2)

** Improved the convergence of gsl_sf_gamma_inc_P for x/a ~=~ 1 and
   large x,a.  Fixes problems with large arguments in cdf functions
   such as gsl_cdf_chisq_Pinv(x,nu) [bug 24704].

** Fixed gsl_ran_gamma_knuth to handle the case of a >= UINT_MAX [bug
   #24897]

** Added gsl_bspline_eval_deriv to compute bspline derivatives
   (Rhys Ulerich)

** Added a faster simplex mininimser gsl_multimin_fminimizer_nmsimplex2
   which is O(N) instead of O(N^2) [bug #24418]

** Improved the original chi-squared formula in gsl_monte_vegas to
   avoid catastrophic cancellation [bug #24510].  The previous formula
   could return incorrect or negative values for relative errors <
   1e-8, which could occur when integrating very smooth functions.

** Added new auxiliary functions gsl_cheb_order, gsl_cheb_size,
   gsl_cheb_coeffs for Chebyshev series [bug #21830]

** Updated license of the reference manual to GNU FDL version 1.3.

** Fixed a bug where the gsl_isinf function would return +1 for -Inf
   on systems where isinf(-Inf) returns the non-standard value +1.
   [bug #24489]

** Added missing functions gsl_vector_complex_{isnonneg,add,sub,mul,
   div,scale,add_constant} and gsl_matrix_complex_float_isnonneg [bug
   #22478]

** Cross compilation should now work for x86 hosts.
