@@ -1,3 +1,11 @@
+2009-05-09  Brian Gough  <bjg@network-theory.co.uk>
+
+	* zsolve_cubic.c (gsl_poly_complex_solve_cubic): test R2 < Q3
+	directly, to avoid argument of acos exceeding 1 due to
+	extended precision.
+
+	* solve_cubic.c (gsl_poly_solve_cubic): ditto
+
 2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>
 
 	* gsl_poly.h: use new inline declarations
